# CMake-Example

./: CMakeLists.txt  README.md
A/: CMakeLists.txt
B/: CMakeLists.txt
X/: CMakeLists.txt
