CMAKE_MINIMUM_REQUIRED (VERSION 3.2)

##  Set the main source path to the very top directory
IF (NOT DEFINED MAIN_SRC_PATH)
  SET (MAIN_SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
ENDIF (NOT DEFINED MAIN_SRC_PATH)

##  Project name
PROJECT (top-project VERSION 1.0 LANGUAGES CXX)

##  Set the output directory of the libraries to the top-level binary directory
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

##  Add subdirectories to the build
ADD_SUBDIRECTORY (${MAIN_SRC_PATH}/A ${CMAKE_CURRENT_BINARY_DIR}/A)
ADD_SUBDIRECTORY (${MAIN_SRC_PATH}/B ${CMAKE_CURRENT_BINARY_DIR}/B)
ADD_SUBDIRECTORY (${MAIN_SRC_PATH}/X ${CMAKE_CURRENT_BINARY_DIR}/X)

##  CTest
ENABLE_TESTING ()
