CMAKE_MINIMUM_REQUIRED (VERSION 3.2)

##  Set the main source path to the very top directory
IF (NOT DEFINED MAIN_SRC_PATH)
  SET (MAIN_SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
ENDIF (NOT DEFINED MAIN_SRC_PATH)

##  Project name
PROJECT (my-project VERSION 1.0 LANGUAGES CXX)

##  Add subdirectories to the build
ADD_SUBDIRECTORY (${MAIN_SRC_PATH}/X ${CMAKE_CURRENT_BINARY_DIR}/X)

##  CTest
ENABLE_TESTING ()
