CMAKE_MINIMUM_REQUIRED (VERSION 3.2)

##  Set variable names for this module
SET (TARGET_NAME_LIB "A")
SET (TARGET_NAME_EXEC "A-test")

##  Set the source files
SET (SRC_FILES
  a.cpp
)

##  Set the files with main ()
SET (TEST_FILES
  main.cpp
)

##  Set the main source path to the very top directory
IF (NOT DEFINED MAIN_SRC_PATH)
  SET (MAIN_SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/..")
ENDIF (NOT DEFINED MAIN_SRC_PATH)

##  Project name
PROJECT (${TARGET_NAME_LIB} VERSION 1.0 LANGUAGES CXX)

##  Create a library
IF (NOT TARGET ${TARGET_NAME_LIB})
  ADD_LIBRARY (${TARGET_NAME_LIB} SHARED ${SRC_FILES})
ENDIF (NOT TARGET ${TARGET_NAME_LIB})

##  Create the test executable by linking to the library
IF (NOT TARGET ${TARGET_NAME_EXEC})
  ADD_EXECUTABLE (${TARGET_NAME_EXEC} ${TEST_FILES})
  TARGET_LINK_LIBRARIES (${TARGET_NAME_EXEC} ${TARGET_NAME_LIB})
ENDIF (NOT TARGET ${TARGET_NAME_EXEC})

##  CTest
ENABLE_TESTING ()
ADD_TEST (NAME A-test COMMAND ${TARGET_NAME_EXEC})
