CMAKE_MINIMUM_REQUIRED (VERSION 3.2)

##  Set variable names for this module
SET (TARGET_NAME_EXEC "X-main")

##  Set the source files
SET (SRC_FILES
)

##  Set the files with main ()
SET (TEST_FILES
  main.cpp
)

##  Set the main source path to the very top directory
IF (NOT DEFINED MAIN_SRC_PATH)
  SET (MAIN_SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/..")
ENDIF (NOT DEFINED MAIN_SRC_PATH)

##  Project name
PROJECT (${TARGET_NAME_EXEC} VERSION 1.0 LANGUAGES CXX)

##  Create the test executable
ADD_EXECUTABLE (${TARGET_NAME_EXEC} ${TEST_FILES})
TARGET_LINK_LIBRARIES (${TARGET_NAME_EXEC} A B)

##  Location of additional header files
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME_EXEC} PUBLIC ${MAIN_SRC_PATH}/A)
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME_EXEC} PUBLIC ${MAIN_SRC_PATH}/B)

##  Add subdirectories to the build
ADD_SUBDIRECTORY (${MAIN_SRC_PATH}/A ${CMAKE_CURRENT_BINARY_DIR}/A)
ADD_SUBDIRECTORY (${MAIN_SRC_PATH}/B ${CMAKE_CURRENT_BINARY_DIR}/B)

##  CTest
ENABLE_TESTING ()
ADD_TEST (NAME X-test COMMAND ${TARGET_NAME_EXEC})

